syntax = "proto3";

package brs.peer;

option java_multiple_files = true;
option java_package = "signumgrpc.proto";

message getInfoReq {
    string announcedAddress = 1;
    string application = 2;
    string platform = 3;
    string version = 4;
    string networkName = 5;
    bool shareAddress = 6; 
}

message getInfoRes {
    optional string announcedAddress = 1;
    string application = 2;
    string version = 3;
    string platform = 4;
    bool shareAddress = 5;
    string networkName = 6;
}

service PeersService {
    rpc getInfo(getInfoReq) returns (getInfoRes);
}